--- a/index.html
+++ b/index.html
@@ -22,6 +22,35 @@
                         <div class="status-icon" id="statusIcon"></div>
                         <div class="status-text" id="statusText">Pripravljen na polnjenje</div>
                     </div>
+                </div>                <div class="charging-mode-selector">
+                    <h3 class="mode-title">Izberite način polnjenja:</h3>
+                    <div class="mode-buttons">
+                        <button class="mode-button active" id="economyMode">Ekonomično</button>
+                        <button class="mode-button" id="fastMode">Hitro</button>
+                        <button class="info-button" id="infoButton">i</button>
+                    </div>
+                </div>
+                
+                <!-- Modal za prikaz informacij o načinih polnjenja -->
+                <div id="infoModal" class="modal">
+                    <div class="modal-content">
+                        <span class="close-button">&times;</span>
+                        <h3>Informacije o načinih polnjenja</h3>
+                        <div class="info-content">
+                            <div class="info-section">
+                                <h4>Ekonomično polnjenje</h4>
+                                <p><strong>Moč:</strong> <span id="economyPower">11 kW</span></p>
+                                <p><strong>Cena:</strong> <span id="economyPrice">0,20 € / kWh</span></p>
+                                <p><strong>Ocenjena hitrost polnjenja:</strong> <span id="economySpeed">~10-12% na uro</span></p>
+                            </div>
+                            <div class="info-section">
+                                <h4>Hitro polnjenje</h4>
+                                <p><strong>Moč:</strong> <span id="fastPower">22 kW</span></p>
+                                <p><strong>Cena:</strong> <span id="fastPrice">0,35 € / kWh</span></p>
+                                <p><strong>Ocenjena hitrost polnjenja:</strong> <span id="fastSpeed">~22-25% na uro</span></p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="charging-details">
